--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
 <section class="home" id="home">
     <div class="home-img">
-        <img src="assets/Profile.jpg" alt="Profile Image">
+        <!-- changed: use explicit relative path -->
+        <img src="./assets/Profile.jpg" alt="Profile Image">
     </div>
 
     <div class="home-content">
@@ -59,7 +60,8 @@
         </div>
 
         <div class="about-img">
-            <img src="assets/Profile_op.jpg" alt="Profile_op Image">
+            <!-- changed: use explicit relative path -->
+            <img src="./assets/Profile_op.jpg" alt="Profile_op Image">
             
         </div>
     </section>
